--- a/src/sass/components/_footer.scss
+++ b/src/sass/components/_footer.scss
@@ -14,6 +14,7 @@ footer {
         margin: 0 0 1.5rem 0;
         padding: 0;
         list-style: none;
+
         li {
           a {
             font-size: 14px;
@@ -26,6 +27,12 @@ footer {
           }
         }
       }
+    }
+
+    .payment-image {
+      display: block;
+      max-width: 240px;
+      width: 100%;
     }
 
     .payment-methods {
@@ -43,7 +50,7 @@ footer {
     background-color: $footer-claim-bg;
 
     .container > .row {
-      height: 95px;
+      min-height: 95px;
     }
 
     .copyright {
@@ -75,6 +82,23 @@ footer {
           }
         }
       }
+    }
+  }
+}
+@media (max-width: 768px) {
+  .bottom-bar {
+    .copyright {
+      order: 2;
+    }
+    .placeholder {
+      padding-top: 10px;
+      width: 100%;
+      order: 1;
+      text-align: center;
+      margin-bottom: 15px;
+    }
+    .socialmedia {
+      order: 3;
     }
   }
 }
