--- a/src/partials/90_footer.html
+++ b/src/partials/90_footer.html
@@ -54,7 +54,7 @@
     <div class="container">
       <div class="row align-items-center">
         <div class="col-12 col-md-4 placeholder">
-          <img src="https://via.placeholder.com/200x40.png" />
+          <img src="https://via.placeholder.com/200x40.png" alt="placeholder" />
         </div>
         <div class="col-6 col-md-4 copyright text-center">
           <p>©Copyright 2016 Bazar | All Rights Reserved</p>
