--- a/src/partials/10_header.html
+++ b/src/partials/10_header.html
@@ -49,36 +49,52 @@
       </div>
     </div>
   </div>
-  <div class="menu-bar">
-    <div class="container">
-      <div class="row align-items-center">
-        <div class="col">
-          <form action="" class="search-form">
-            <div class="category">
-              <i class="fas fa-list-ul"></i>
-              <select name="" id="">
-                <option value="">Select a category</option>
-              </select>
-              <i class="fas fa-caret-down"></i>
-            </div>
-            <div class="search-field">
-              <input placeholder="Search products..." type="text" />
-              <button><i class="fa fa-search"></i></button>
-            </div>
-          </form>
-        </div>
-        <div class="col-auto menu">
-          <ul>
-            <li><a href="#" class="active">Home</a></li>
-            <li><a href="#">Furniture</a></li>
-            <li><a href="#">Chair</a></li>
-            <li><a href="#">Table</a></li>
-            <li><a href="#">Sofa</a></li>
-            <li><a href="#">Bedroom</a></li>
-            <li><a href="#">Blog</a></li>
-          </ul>
+  <nav class="navbar-expand-lg navbar-dark c-nav">
+    <div class="menu-bar">
+      <div class="container">
+        <div class="row align-items-center">
+          <div class="col col-xs-12 col-md-6 menu-bar--left">
+            <form action="" class="search-form">
+              <div class="category">
+                <i class="fas fa-list-ul"></i>
+                <select name="" id="">
+                  <option value="">Select a category</option>
+                </select>
+                <i class="fas fa-caret-down"></i>
+              </div>
+              <div class="search-field">
+                <input placeholder="Search products..." type="text" />
+                <button><i class="fa fa-search"></i></button>
+              </div>
+            </form>
+          </div>
+          <div
+            class="col col-xs-12 col-md-6 navbar-collapse u-move t-site-header__menu col-auto menu collapse"
+            id="navbarNav"
+          >
+            <ul class="navbar-menu navbar-main navbar-nav">
+              <li><a href="#" class="active">Home</a></li>
+              <li><a href="#">Furniture</a></li>
+              <li><a href="#">Chair</a></li>
+              <li><a href="#">Table</a></li>
+              <li><a href="#">Sofa</a></li>
+              <li><a href="#">Bedroom</a></li>
+              <li><a href="#">Blog</a></li>
+            </ul>
+          </div>
+          <button
+            class="navbar-toggler navbar-toggler-right"
+            type="button"
+            data-toggle="collapse"
+            data-target="#navbarNav"
+            aria-controls="navbarNav"
+            aria-expanded="false"
+            aria-label="Toggle navigation"
+          >
+            <span class="navbar-toggler-icon"></span>
+          </button>
         </div>
       </div>
     </div>
-  </div>
+  </nav>
 </header>
