--- a/src/partials/50_section-products.html
+++ b/src/partials/50_section-products.html
@@ -26,6 +26,97 @@
         <div class="product-box">
           <div class="photo">
             <div class="sale">sale</div>
+            <div class="old-price">$ 50.00</div>
+            <div class="buttons">
+              <a href="#" class="btn-main-small">Quick View</a>
+              <a href="#" class="btn-main-small"
+                ><i class="fa fa-shopping-basket"></i> ADD TO CART</a
+              >
+            </div>
+          </div>
+          <div class="content">
+            <h5>Aenean Ru Bristique</h5>
+            <div class="stars">
+              <a href="#" class="full"></a> <a href="#" class="full"></a>
+              <a href="#"></a> <a href="#"></a> <a href="#"></a>
+            </div>
+          </div>
+          <div class="line"></div>
+          <div class="actions">
+            <div class="outlines">
+              <a href="#" class="btn-outline"><i class="far fa-heart"></i></a>
+              <a href="#" class="btn-outline"><i class="fas fa-exchange-alt"></i></a>
+            </div>
+
+            <div class="price"><div class="btn-main-small no-hover">$ 30.00</div></div>
+          </div>
+        </div>
+      </div>
+      <div class="col-3">
+        <div class="product-box">
+          <div class="photo">
+            <div class="sale">sale</div>
+            <div class=""></div>
+            <div class="buttons">
+              <a href="#" class="btn-main-small">Quick View</a>
+              <a href="#" class="btn-main-small"
+                ><i class="fa fa-shopping-basket"></i> ADD TO CART</a
+              >
+            </div>
+          </div>
+          <div class="content">
+            <h5>Aenean Ru Bristique</h5>
+            <div class="stars">
+              <a href="#" class="full"></a> <a href="#" class="full"></a>
+              <a href="#"></a> <a href="#"></a> <a href="#"></a>
+            </div>
+          </div>
+          <div class="line"></div>
+          <div class="actions">
+            <div class="outlines">
+              <a href="#" class="btn-outline"><i class="far fa-heart"></i></a>
+              <a href="#" class="btn-outline"><i class="fas fa-exchange-alt"></i></a>
+            </div>
+            <div class="price"><div class="btn-main-small no-hover">$ 301.00</div></div>
+          </div>
+        </div>
+      </div>
+      <div class="col-3">
+        <div class="product-box">
+          <div class="photo">
+            <div class="sale">sale</div>
+            <div class=""></div>
+            <div class="buttons">
+              <a href="#" class="btn-main-small">Quick View</a>
+              <a href="#" class="btn-main-small"
+                ><i class="fa fa-shopping-basket"></i> ADD TO CART</a
+              >
+            </div>
+          </div>
+          <div class="content">
+            <h5>Aenean Ru Bristique</h5>
+            <div class="stars">
+              <a href="#" class="full"></a> <a href="#" class="full"></a>
+              <a href="#"></a> <a href="#"></a> <a href="#"></a>
+            </div>
+          </div>
+          <div class="line"></div>
+          <div class="actions">
+            <div class="outlines">
+              <a href="#" class="btn-outline"><i class="far fa-heart"></i></a>
+              <a href="#" class="btn-outline"><i class="fas fa-exchange-alt"></i></a>
+            </div>
+            <div class="price">
+              <div class="btn-main-small no-hover">$ 3000.00</div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="col-3">
+        <div class="product-box">
+          <div class="photo">
+            <div class="sale">sale</div>
+            <div class=""></div>
             <div class="buttons">
               <a href="#" class="btn-main-small">Quick View</a>
               <a href="#" class="btn-main-small"
@@ -54,6 +145,7 @@
         <div class="product-box">
           <div class="photo">
             <div class="sale">sale</div>
+            <div class=""></div>
             <div class="buttons">
               <a href="#" class="btn-main-small">Quick View</a>
               <a href="#" class="btn-main-small"
@@ -82,6 +174,7 @@
         <div class="product-box">
           <div class="photo">
             <div class="sale">sale</div>
+            <div class="old-price">$ 80.00</div>
             <div class="buttons">
               <a href="#" class="btn-main-small">Quick View</a>
               <a href="#" class="btn-main-small"
@@ -110,6 +203,7 @@
         <div class="product-box">
           <div class="photo">
             <div class="sale">sale</div>
+            <div class=""></div>
             <div class="buttons">
               <a href="#" class="btn-main-small">Quick View</a>
               <a href="#" class="btn-main-small"
@@ -138,90 +232,7 @@
         <div class="product-box">
           <div class="photo">
             <div class="sale">sale</div>
-            <div class="buttons">
-              <a href="#" class="btn-main-small">Quick View</a>
-              <a href="#" class="btn-main-small"
-                ><i class="fa fa-shopping-basket"></i> ADD TO CART</a
-              >
-            </div>
-          </div>
-          <div class="content">
-            <h5>Aenean Ru Bristique</h5>
-            <div class="stars">
-              <a href="#" class="full"></a> <a href="#" class="full"></a>
-              <a href="#"></a> <a href="#"></a> <a href="#"></a>
-            </div>
-          </div>
-          <div class="line"></div>
-          <div class="actions">
-            <div class="outlines">
-              <a href="#" class="btn-outline"><i class="far fa-heart"></i></a>
-              <a href="#" class="btn-outline"><i class="fas fa-exchange-alt"></i></a>
-            </div>
-            <div class="price"><div class="btn-main-small no-hover">$ 30.00</div></div>
-          </div>
-        </div>
-      </div>
-      <div class="col-3">
-        <div class="product-box">
-          <div class="photo">
-            <div class="sale">sale</div>
-            <div class="buttons">
-              <a href="#" class="btn-main-small">Quick View</a>
-              <a href="#" class="btn-main-small"
-                ><i class="fa fa-shopping-basket"></i> ADD TO CART</a
-              >
-            </div>
-          </div>
-          <div class="content">
-            <h5>Aenean Ru Bristique</h5>
-            <div class="stars">
-              <a href="#" class="full"></a> <a href="#" class="full"></a>
-              <a href="#"></a> <a href="#"></a> <a href="#"></a>
-            </div>
-          </div>
-          <div class="line"></div>
-          <div class="actions">
-            <div class="outlines">
-              <a href="#" class="btn-outline"><i class="far fa-heart"></i></a>
-              <a href="#" class="btn-outline"><i class="fas fa-exchange-alt"></i></a>
-            </div>
-            <div class="price"><div class="btn-main-small no-hover">$ 30.00</div></div>
-          </div>
-        </div>
-      </div>
-      <div class="col-3">
-        <div class="product-box">
-          <div class="photo">
-            <div class="sale">sale</div>
-            <div class="buttons">
-              <a href="#" class="btn-main-small">Quick View</a>
-              <a href="#" class="btn-main-small"
-                ><i class="fa fa-shopping-basket"></i> ADD TO CART</a
-              >
-            </div>
-          </div>
-          <div class="content">
-            <h5>Aenean Ru Bristique</h5>
-            <div class="stars">
-              <a href="#" class="full"></a> <a href="#" class="full"></a>
-              <a href="#"></a> <a href="#"></a> <a href="#"></a>
-            </div>
-          </div>
-          <div class="line"></div>
-          <div class="actions">
-            <div class="outlines">
-              <a href="#" class="btn-outline"><i class="far fa-heart"></i></a>
-              <a href="#" class="btn-outline"><i class="fas fa-exchange-alt"></i></a>
-            </div>
-            <div class="price"><div class="btn-main-small no-hover">$ 30.00</div></div>
-          </div>
-        </div>
-      </div>
-      <div class="col-3">
-        <div class="product-box">
-          <div class="photo">
-            <div class="sale">sale</div>
+            <div class=""></div>
             <div class="buttons">
               <a href="#" class="btn-main-small">Quick View</a>
               <a href="#" class="btn-main-small"
