--- a/src/sass/components/_feature-box.scss
+++ b/src/sass/components/_feature-box.scss
@@ -1,14 +1,14 @@
 .feature-box {
   border: 1px solid #b6b6b6;
   text-align: center;
-  margin-top: 40px;
+  margin-top: $grid-base * 4;
 
   .icon {
     transform: translateY(-50%);
 
     i {
-      width: 60px;
-      height: 60px;
+      width: $grid-base * 6;
+      height: $grid-base * 6;
       border-radius: 100%;
       position: relative;
       color: $text-color;
@@ -25,10 +25,10 @@
       top: 50%;
       left: 50%;
       transform: translate(-50%, -50%);
-      width: 76px;
-      height: 76px;
+      width: $grid-base * 7.6;
+      height: $grid-base * 7.6;
       border-radius: 100%;
-      background-color: #ffffff;
+      background-color: $white;
       z-index: -1;
     }
   }
@@ -52,7 +52,7 @@
   &.active {
     i {
       background-color: $primary;
-      color: #ffffff;
+      color: $white;
       border-color: $primary;
     }
 
@@ -66,7 +66,7 @@
   &:hover {
     i {
       background-color: $primary;
-      color: #ffffff;
+      color: $white;
       border-color: $primary;
     }
 
