--- a/src/sass/_variables.scss
+++ b/src/sass/_variables.scss
@@ -6,9 +6,21 @@ $footer-claim-bg: #2a2a2a;
 $footer-bg: #363636;
 
 $primary: #d58e32;
-
 $text-color: #2a2a2a;
-
 $form-border-color: #292929;
 //Grid
 $grid-base: 10px;
+
+//Tekst
+$font-base-size: 1rem; //16px
+$font-size-1: $font-base-size * 3; //~48px
+$font-size-2: $font-base-size * 1.5; //24px
+$font-size-3: $font-base-size * 1.125; // 18px
+$font-size-4: $font-base-size * 1; //16px
+$font-size-5: $font-base-size * 0.875; //14px
+$font-size-6: $font-base-size * 0.75; //12px
+$font-size-7: $font-base-size * 0.625; //10px
+
+$line-height-base: 1.5;
+$line-height-sm: 1.2;
+$line-height-lg: 1.8;
