--- a/src/sass/components/_panel-bar.scss
+++ b/src/sass/components/_panel-bar.scss
@@ -29,10 +29,13 @@
 
   .menu {
     text-align: center;
+    margin-right: 86px;
     ul {
       margin: 0;
       padding: 0;
       list-style: none;
+      border-bottom: none;
+      justify-content: center;
       li {
         display: inline-block;
         margin: 0 0.5rem;
@@ -44,6 +47,8 @@
           text-decoration: none;
           font-size: 18px;
           display: block;
+          border: none;
+          padding: 5px 0;
 
           &.active,
           &:hover {
@@ -62,6 +67,39 @@
   }
 
   .dots {
+    ul {
+      margin: 0;
+      padding: 0 0 0 1rem;
+      list-style: none;
+      background-color: #ffffff;
+      transform: translateY(15px);
+
+      li {
+        display: inline-block;
+        margin-left: 0.5rem;
+
+        a {
+          display: block;
+          width: 13px;
+          height: 13px;
+          border-radius: 6px;
+          background-color: #e1e1e1;
+
+          &.active,
+          &:hover {
+            background-color: $primary;
+          }
+        }
+      }
+    }
+  }
+}
+.tab-content {
+  position: relative;
+  .dots {
+    position: absolute;
+    top: -60px;
+    right: 0;
     ul {
       margin: 0;
       padding: 0 0 0 1rem;
