--- a/src/partials/50_section-products.html
+++ b/src/partials/50_section-products.html
@@ -12,17 +12,10 @@
             <li><a href="#">Dining</a></li>
           </ul>
         </div>
-        <div class="col-auto dots">
-          <ul>
-            <li><a href="#" class="active"></a></li>
-            <li><a href="#"></a></li>
-            <li><a href="#"></a></li>
-          </ul>
-        </div>
       </div>
     </div>
-    <div class="row">
-      <div class="col-3">
+    <div class="products-carousel">
+      <div class="col-3 carousel-cell">
         <div class="product-box">
           <div class="photo">
             <div class="sale">sale</div>
@@ -50,7 +43,7 @@
           </div>
         </div>
       </div>
-      <div class="col-3">
+      <div class="col-3 carousel-cell">
         <div class="product-box">
           <div class="photo">
             <div class="sale">sale</div>
@@ -78,7 +71,7 @@
           </div>
         </div>
       </div>
-      <div class="col-3">
+      <div class="col-3 carousel-cell">
         <div class="product-box">
           <div class="photo">
             <div class="sale">sale</div>
@@ -106,7 +99,7 @@
           </div>
         </div>
       </div>
-      <div class="col-3">
+      <div class="col-3 carousel-cell">
         <div class="product-box">
           <div class="photo">
             <div class="sale">sale</div>
@@ -134,7 +127,7 @@
           </div>
         </div>
       </div>
-      <div class="col-3">
+      <div class="col-3 carousel-cell">
         <div class="product-box">
           <div class="photo">
             <div class="sale">sale</div>
@@ -162,7 +155,7 @@
           </div>
         </div>
       </div>
-      <div class="col-3">
+      <div class="col-3 carousel-cell">
         <div class="product-box">
           <div class="photo">
             <div class="sale">sale</div>
@@ -190,7 +183,7 @@
           </div>
         </div>
       </div>
-      <div class="col-3">
+      <div class="col-3 carousel-cell">
         <div class="product-box">
           <div class="photo">
             <div class="sale">sale</div>
@@ -218,7 +211,7 @@
           </div>
         </div>
       </div>
-      <div class="col-3">
+      <div class="col-3 carousel-cell">
         <div class="product-box">
           <div class="photo">
             <div class="sale">sale</div>
