--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -7,12 +7,15 @@
 @import "fontawesome/solid";
 @import "fontawesome/brands";
 @import "fontawesome/regular";
+@import "fontawesome/spacing";
 
 @import "components/header";
 @import "components/footer";
 
 @import "components/button";
 @import "components/feature-box";
+@import "components/images";
+@import "components/promotion-box";
 @import "components/panel-bar";
 @import "components/post-box";
 @import "components/product-box";
