Add color to overlay

--- a/src/sass/_variables.scss
+++ b/src/sass/_variables.scss
@@ -10,6 +10,7 @@ $primary: #d58e32;
 $text-color: #2a2a2a;
 $form-border-color: #292929;
 $gray-light: #666;
+$gray-overlay-promo: #7c8489;
 //Tekst
 $font-base-size: 1rem; //16px
 $font-size-1: $font-base-size * 3; //~48px
