--- a/src/sass/components/_promotion-box.scss
+++ b/src/sass/components/_promotion-box.scss
@@ -21,7 +21,7 @@
   &--overlay {
     @include centererPos();
     color: white;
-    background: $gray-light;
+    background: $gray-overlay-promo;
     opacity: 0.7;
     width: 90%;
     padding: 3% 0;
