--- a/src/partials/70_section-blog-posts.html
+++ b/src/partials/70_section-blog-posts.html
@@ -4,17 +4,10 @@
       <div class="row no-gutters align-items-end">
         <div class="col-auto heading"><h3>Latest blog</h3></div>
         <div class="col"></div>
-        <div class="col-auto dots">
-          <ul>
-            <li><a href="#" class="active"></a></li>
-            <li><a href="#"></a></li>
-            <li><a href="#"></a></li>
-          </ul>
-        </div>
       </div>
     </div>
-    <div class="row">
-      <div class="col-4">
+    <div class="blog-slider">
+      <div class="col-4 carousel-cell">
         <div class="post-box">
           <div class="cover">
             <div class="details">
@@ -33,7 +26,7 @@
           </div>
         </div>
       </div>
-      <div class="col-4">
+      <div class="col-4 carousel-cell">
         <div class="post-box">
           <div class="cover">
             <div class="details">
@@ -52,7 +45,45 @@
           </div>
         </div>
       </div>
-      <div class="col-4">
+      <div class="col-4 carousel-cell">
+        <div class="post-box">
+          <div class="cover">
+            <div class="details">
+              <div class="date"><i class="fas fa-calendar-alt"></i> 15 Jan 2016</div>
+              <div class="comments"><i class="fas fa-comments"></i> 4 Comments</div>
+            </div>
+          </div>
+          <div class="post-info">
+            <h5>Products That Fight Static</h5>
+            <p>
+              Aliquam dictum pellentesque nibh sit amet dapibus. Vivamus eget luctus
+              nisi. Nullam euismod leo vehicula, rutrum magna in, ornare enim vehicula,
+              rutrum magna in, ornare enim.
+            </p>
+            <div class="more"><a href="#" class="btn-main">Read more</a></div>
+          </div>
+        </div>
+      </div>
+      <div class="col-4 carousel-cell">
+        <div class="post-box">
+          <div class="cover">
+            <div class="details">
+              <div class="date"><i class="fas fa-calendar-alt"></i> 15 Jan 2016</div>
+              <div class="comments"><i class="fas fa-comments"></i> 4 Comments</div>
+            </div>
+          </div>
+          <div class="post-info">
+            <h5>Products That Fight Static</h5>
+            <p>
+              Aliquam dictum pellentesque nibh sit amet dapibus. Vivamus eget luctus
+              nisi. Nullam euismod leo vehicula, rutrum magna in, ornare enim vehicula,
+              rutrum magna in, ornare enim.
+            </p>
+            <div class="more"><a href="#" class="btn-main">Read more</a></div>
+          </div>
+        </div>
+      </div>
+      <div class="col-4 carousel-cell">
         <div class="post-box">
           <div class="cover">
             <div class="details">
