--- a/src/sass/components/_footer.scss
+++ b/src/sass/components/_footer.scss
@@ -19,8 +19,7 @@ footer {
             font-size: 14px;
             line-height: 30px;
             color: rgb(169, 169, 169);
-            @extend .color-animation;
-            @extend .background-color-animation;
+            @extend .animation-transition;
 
             &:hover {
               color: #ffffff;
@@ -70,8 +69,7 @@ footer {
           a {
             color: rgb(169, 169, 169);
             text-decoration: none;
-            @extend .color-animation;
-            @extend .background-color-animation;
+            @extend .animation-transition;
 
             &:hover {
               color: $primary;
