--- a/src/partials/50_section-products.html
+++ b/src/partials/50_section-products.html
@@ -28,9 +28,7 @@
             <div class="sale">sale</div>
             <div class="buttons">
               <a href="#" class="btn-main-small">Quick View</a>
-              <a href="#" class="btn-main-small"
-                ><i class="fa fa-shopping-basket"></i> ADD TO CART</a
-              >
+              <a href="#" class="btn-main-small"><i class="fa fa-shopping-basket"></i> ADD TO CART</a>
             </div>
           </div>
           <div class="content">
@@ -58,9 +56,7 @@
             <div class="sale">sale</div>
             <div class="buttons">
               <a href="#" class="btn-main-small">Quick View</a>
-              <a href="#" class="btn-main-small"
-                ><i class="fa fa-shopping-basket"></i> ADD TO CART</a
-              >
+              <a href="#" class="btn-main-small"><i class="fa fa-shopping-basket"></i> ADD TO CART</a>
             </div>
           </div>
           <div class="content">
@@ -86,9 +82,7 @@
             <div class="sale">sale</div>
             <div class="buttons">
               <a href="#" class="btn-main-small">Quick View</a>
-              <a href="#" class="btn-main-small"
-                ><i class="fa fa-shopping-basket"></i> ADD TO CART</a
-              >
+              <a href="#" class="btn-main-small"><i class="fa fa-shopping-basket"></i> ADD TO CART</a>
             </div>
           </div>
           <div class="content">
@@ -116,9 +110,7 @@
             <div class="sale">sale</div>
             <div class="buttons">
               <a href="#" class="btn-main-small">Quick View</a>
-              <a href="#" class="btn-main-small"
-                ><i class="fa fa-shopping-basket"></i> ADD TO CART</a
-              >
+              <a href="#" class="btn-main-small"><i class="fa fa-shopping-basket"></i> ADD TO CART</a>
             </div>
           </div>
           <div class="content">
@@ -144,9 +136,7 @@
             <div class="sale">sale</div>
             <div class="buttons">
               <a href="#" class="btn-main-small">Quick View</a>
-              <a href="#" class="btn-main-small"
-                ><i class="fa fa-shopping-basket"></i> ADD TO CART</a
-              >
+              <a href="#" class="btn-main-small"><i class="fa fa-shopping-basket"></i> ADD TO CART</a>
             </div>
           </div>
           <div class="content">
@@ -172,9 +162,7 @@
             <div class="sale">sale</div>
             <div class="buttons">
               <a href="#" class="btn-main-small">Quick View</a>
-              <a href="#" class="btn-main-small"
-                ><i class="fa fa-shopping-basket"></i> ADD TO CART</a
-              >
+              <a href="#" class="btn-main-small"><i class="fa fa-shopping-basket"></i> ADD TO CART</a>
             </div>
           </div>
           <div class="content">
@@ -200,9 +188,7 @@
             <div class="sale">sale</div>
             <div class="buttons">
               <a href="#" class="btn-main-small">Quick View</a>
-              <a href="#" class="btn-main-small"
-                ><i class="fa fa-shopping-basket"></i> ADD TO CART</a
-              >
+              <a href="#" class="btn-main-small"><i class="fa fa-shopping-basket"></i> ADD TO CART</a>
             </div>
           </div>
           <div class="content">
@@ -228,9 +214,7 @@
             <div class="sale">sale</div>
             <div class="buttons">
               <a href="#" class="btn-main-small">Quick View</a>
-              <a href="#" class="btn-main-small"
-                ><i class="fa fa-shopping-basket"></i> ADD TO CART</a
-              >
+              <a href="#" class="btn-main-small"><i class="fa fa-shopping-basket"></i> ADD TO CART</a>
             </div>
           </div>
           <div class="content">
