--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -13,6 +13,7 @@
 
 @import "components/button";
 @import "components/feature-box";
+@import "components/feadback-box";
 @import "components/panel-bar";
 @import "components/post-box";
 @import "components/product-box";
