--- a/src/sass/components/_section--features.scss
+++ b/src/sass/components/_section--features.scss
@@ -1,8 +1,10 @@
 .section--features {
   padding: 5rem 0;
 }
+
 @media (max-width: 1199px) {
   .feature-box-wrapper {
     margin-bottom: 10px;
+    height: 100%;
   }
 }
