--- a/src/partials/10_header.html
+++ b/src/partials/10_header.html
@@ -2,7 +2,7 @@
   <div class="top-bar">
     <div class="container">
       <div class="row">
-        <div class="col-8 text-left">
+        <div class="col-auto text-left">
           <ul>
             <li>
               <a href="#">USD <i class="fas fa-caret-down"></i></a>
@@ -15,7 +15,7 @@
             </li>
           </ul>
         </div>
-        <div class="col-4 text-right">
+        <div class="col text-right">
           <ul>
             <li>
               <a href="#"><i class="fas fa-user"></i> Login</a>
@@ -34,8 +34,10 @@
   <div class="company-claim">
     <div class="container">
       <div class="row align-items-center">
-        <div class="col text-left phone-number">
-          <p><i class="fas fa-mobile-alt"></i> 2345 - 3560 - 222</p>
+        <div class="col text-left phone-number-wrapper">
+          <p class="phone-number">
+            <i class="fas fa-mobile-alt"></i> 2345 - 3560 - 222
+          </p>
         </div>
         <div class="col text-center">
           <a href="#"><img src="./images/logo.png"/></a>
