Fix top-menu styling on small devices

--- a/src/partials/10_header.html
+++ b/src/partials/10_header.html
@@ -4,26 +4,26 @@
       <div class="row">
         <div class="col-auto text-left">
           <ul>
-            <li>
+            <li class="dropdown-menu__item">
               <a href="#">USD <i class="fas fa-caret-down"></i></a>
             </li>
-            <li>
+            <li class="dropdown-menu__item">
               <a href="#">English <i class="fas fa-caret-down"></i></a>
             </li>
-            <li>
+            <li class="dropdown-menu__item">
               <a href="#">Help <i class="fas fa-caret-down"></i></a>
             </li>
           </ul>
         </div>
         <div class="col text-right">
-          <ul>
-            <li>
+          <ul class="user-menu__list">
+            <li class="user-menu__item">
               <a href="#"><i class="fas fa-user"></i> Login</a>
             </li>
-            <li>
+            <li class="user-menu__item">
               <a href="#"><i class="fas fa-lock"></i> Register</a>
             </li>
-            <li>
+            <li class="user-menu__item">
               <a href="#"><i class="fas fa-bars"></i></a>
             </li>
           </ul>
