--- a/src/partials/50_section-products.html
+++ b/src/partials/50_section-products.html
@@ -2,7 +2,7 @@
   <div class="container">
     <div class="panel-bar">
       <div class="row no-gutters align-items-end">
-        <div class="col-auto col-md-auto heading"><h3>New furniture</h3></div>
+        <div class="col-sm-12 col-md-auto heading"><h3>New furniture</h3></div>
         <div class="col menu">
           <ul>
             <li><a href="#" class="active">Bed</a></li>
