Fix image, add colors to variables

--- a/src/sass/_variables.scss
+++ b/src/sass/_variables.scss
@@ -3,8 +3,10 @@ $header-bg: #723636;
 
 $footer-claim-bg: #2a2a2a;
 $footer-bg: #363636;
+$footer-text: rgb(169, 169, 169);
 
 $primary: #d58e32;
+$white: #fff;
 
 $text-color: #2a2a2a;
 
