--- a/src/partials/90_footer.html
+++ b/src/partials/90_footer.html
@@ -45,7 +45,11 @@
               <li><a href="#">Shipping</a></li>
             </ul>
           </div>
-          <img class="payment-image" src="./images/cards.png" />
+          <img
+            class="payment-image"
+            src="./images/cards.png"
+            alt="payment-card-image"
+          />
         </div>
       </div>
     </div>
