--- a/src/sass/components/_footer.scss
+++ b/src/sass/components/_footer.scss
@@ -5,13 +5,13 @@ footer {
 
     .menu-wrapper {
       h6 {
-        color: #ffffff;
+        color: $white;
         text-transform: uppercase;
-        margin: 0 0 1rem 0;
+        margin-bottom: 1rem;
       }
 
       ul {
-        margin: 0 0 1.5rem 0;
+        margin-bottom: 1.5rem;
         padding: 0;
         list-style: none;
 
@@ -19,10 +19,10 @@ footer {
           a {
             font-size: 14px;
             line-height: 30px;
-            color: rgb(169, 169, 169);
+            color: $footer-text;
 
             &:hover {
-              color: #ffffff;
+              color: $white;
             }
           }
         }
@@ -56,7 +56,7 @@ footer {
     .copyright {
       p {
         margin: 0;
-        color: rgb(169, 169, 169);
+        color: $footer-text;
         font-size: 14px;
         line-height: 26px;
       }
@@ -73,7 +73,7 @@ footer {
           margin-left: 1rem;
 
           a {
-            color: rgb(169, 169, 169);
+            color: $footer-text;
             text-decoration: none;
 
             &:hover {
@@ -86,7 +86,7 @@ footer {
   }
 }
 
-@media (max-width: 768px) {
+@include media-breakpoint-down(md) {
   .bottom-bar {
     .copyright {
       order: 2;
