Improve code quality

--- a/src/sass/_variables.scss
+++ b/src/sass/_variables.scss
@@ -5,7 +5,10 @@ $footer-claim-bg: #2a2a2a;
 $footer-bg: #363636;
 
 $primary: #d58e32;
+$white: #ffffff;
 
 $text-color: #2a2a2a;
 
 $form-border-color: #292929;
+$panel-border-grey: #e2e2e2;
+$dot-bg: #e1e1e1;
