--- a/src/partials/50_section-products.html
+++ b/src/partials/50_section-products.html
@@ -4,7 +4,7 @@
       <div class="row no-gutters align-items-end">
         <div class="col-auto heading"><h3>New furniture</h3></div>
         <div class="col menu">
-          <ul class="nav nav-tabs" id="ProductsTab" role="tablist">
+          <ul class="nav nav-tabs" id="productsTab" role="tablist">
             <li class="nav-item">
               <a
                 class="nav-link active"
@@ -69,7 +69,7 @@
         </div>
       </div>
     </div>
-    <div class="tab-content" id="ProductsContent">
+    <div class="tab-content" id="productsContent">
       <div
         class="tab-pane fade show active"
         id="bed"
