Add variable, improve code quality

--- a/src/sass/components/_panel-bar.scss
+++ b/src/sass/components/_panel-bar.scss
@@ -2,7 +2,7 @@
   margin-bottom: 30px;
 
   .row > * {
-    border-bottom: 4px solid #e2e2e2;
+    border-bottom: 4px solid $panel-border-grey;
   }
 
   .heading {
@@ -29,10 +29,12 @@
 
   .menu {
     text-align: center;
+
     ul {
       margin: 0;
       padding: 0;
       list-style: none;
+
       li {
         display: inline-block;
         margin: 0 0.5rem;
@@ -64,9 +66,9 @@
   .dots {
     ul {
       margin: 0;
-      padding: 0 0 0 1rem;
+      padding-left: 1rem;
       list-style: none;
-      background-color: #ffffff;
+      background-color: $white;
       transform: translateY(15px);
 
       li {
@@ -78,7 +80,7 @@
           width: 13px;
           height: 13px;
           border-radius: 6px;
-          background-color: #e1e1e1;
+          background-color: $dot-bg;
 
           &.active,
           &:hover {
@@ -89,6 +91,7 @@
     }
   }
 }
+
 .products-carousel {
   .flickity-button {
     &:hover {
@@ -105,8 +108,8 @@
     margin: 0;
     list-style: none;
     line-height: 1;
-    padding: 0 0 0 1rem;
-    background-color: #ffffff;
+    padding-left: 1rem;
+    background-color: $white;
 
     .dot {
       display: inline-block;
@@ -116,13 +119,14 @@
       width: 13px;
       height: 13px;
       border-radius: 6px;
-      background-color: #e1e1e1;
+      background-color: $dot-bg;
 
       &.active,
       &:hover {
         background-color: $primary;
       }
     }
+
     .is-selected {
       background-color: $primary;
     }
