--- a/src/sass/components/_product-box.scss
+++ b/src/sass/components/_product-box.scss
@@ -1,18 +1,15 @@
 .product-box .buttons {
   display: flex;
   justify-content: space-between;
-
-  a {
-    opacity: 0;
-  }
+  opacity: 0;
 }
 
 .product-box {
-  background-color: #ffffff;
+  background-color: #fff;
   border: 1px solid #e1e1e1;
   margin-bottom: 2rem;
 
-  &:hover .buttons a {
+  &:hover .buttons {
     opacity: 1;
   }
 
