--- a/src/sass/components/_product-box.scss
+++ b/src/sass/components/_product-box.scss
@@ -33,7 +33,7 @@
 
     .old-price {
       font-size: 14px;
-      color: #fff;
+      color: $old-price-color;
       position: absolute;
       top: 10px;
       right: 10px;
