--- a/src/sass/components/_section--brands.scss
+++ b/src/sass/components/_section--brands.scss
@@ -7,7 +7,7 @@
   border: 1px solid #e1e1e1;
   margin: 20px 10px;
   background-size: cover;
-  position: center;
+  background-position: center;
 }
 
 .brands-panel {
@@ -28,7 +28,6 @@
   width: 30px;
   margin: 20px 0;
   background: black;
-  //padding-left: 6px;
 }
 
 .prev {
