--- a/src/sass/_variables.scss
+++ b/src/sass/_variables.scss
@@ -7,6 +7,6 @@ $footer-bg: #363636;
 $primary: #d58e32;
 
 $text-color: #2a2a2a;
-$old-price-color: #fff;
+$old-price-color: #2a2a2a;
 
 $form-border-color: #292929;
