--- a/src/sass/components/_product-box.scss
+++ b/src/sass/components/_product-box.scss
@@ -30,21 +30,6 @@
       display: flex;
       justify-content: space-between;
     }
-
-    .old-price {
-      font-size: 14px;
-      color: $old-price-color;
-      position: absolute;
-      top: 10px;
-      right: 10px;
-      line-height: 55px;
-      border-radius: 50%;
-      height: 55px;
-      width: 55px;
-      background: $primary;
-      text-decoration: line-through;
-      text-align: center;
-    }
   }
 
   .content {
@@ -93,5 +78,19 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
+  }
+
+  .price {
+    display: flex;
+  }
+
+  .old-price {
+    font-size: 13px;
+    line-height: 24px;
+    padding: 5px 10px;
+    font-weight: 400;
+    color: $old-price-color;
+    text-decoration: line-through;
+    text-align: center;
   }
 }
