--- a/src/sass/_variables.scss
+++ b/src/sass/_variables.scss
@@ -1,11 +1,9 @@
 $header-topbar-bg: #864343;
 $header-bg: #723636;
-
+$white: #fff;
+$black: #000;
 $footer-claim-bg: #2a2a2a;
 $footer-bg: #363636;
-
 $primary: #d58e32;
-
 $text-color: #2a2a2a;
-
 $form-border-color: #292929;
