Add style to category

--- a/src/partials/10_header.html
+++ b/src/partials/10_header.html
@@ -57,7 +57,9 @@
             <i class="fas fa-list-ul"></i>
             <ul>
               <li>
-                <a href="#">Select a category</a> <i class="fas fa-caret-down"></i>
+                <div class="col-offset-2">
+                  <a href="#">Select a category</a> <i class="fas fa-caret-down"></i>
+                </div>
                 <ul>
                   <li><a href="#">Free HTML</a></li>
                   <li><a href="#">Free CSS</a></li>
