--- a/src/sass/_variables.scss
+++ b/src/sass/_variables.scss
@@ -1,9 +1,24 @@
+//Colors
 $header-topbar-bg: #864343;
 $header-bg: #723636;
 $white: #fff;
 $black: #000;
 $footer-claim-bg: #2a2a2a;
 $footer-bg: #363636;
+$featured-phoneNumber: rgb(216, 216, 216);
+$featured-cardCounter: rgb(224, 227, 237);
+$featured-menuBar: rgba(1, 2, 2, 0.2);
+$featured-box: #b6b6b6;
+$featured-booxContent: rgb(42, 42, 42);
 $primary: #d58e32;
 $text-color: #2a2a2a;
 $form-border-color: #292929;
+$menu-categoryUl: #b07324;
+
+//Grid
+$grid-base: 10px;
+
+//Breakpoint
+$bp-medium: "800px";
+$bp-large: "1200px";
+$bp-small: "991px";
