Fix issues on reviever request

--- a/src/sass/_variables.scss
+++ b/src/sass/_variables.scss
@@ -8,4 +8,7 @@ $primary: #d58e32;
 
 $text-color: #2a2a2a;
 
+$brands-border-color: #e1e1e1;
+$brands-chevron-color: #fff;
+
 $form-border-color: #292929;
