--- a/src/partials/80_section-brands.html
+++ b/src/partials/80_section-brands.html
@@ -4,30 +4,12 @@
       <div class="brands-button prev">
         <a class="" href="#"><i class="fa fa-chevron-left"></i></a>
       </div>
-      <div
-        class="brand-photo"
-        style="background-image: url('images/placeholder-1.jpeg');"
-      ></div>
-      <div
-        class="brand-photo"
-        style="background-image: url('images/placeholder-2.png');"
-      ></div>
-      <div
-        class="brand-photo"
-        style="background-image: url('images/placeholder-1.jpeg');"
-      ></div>
-      <div
-        class="brand-photo"
-        style="background-image: url('images/placeholder-2.png');"
-      ></div>
-      <div
-        class="brand-photo"
-        style="background-image: url('images/placeholder-1.jpeg');"
-      ></div>
-      <div
-        class="brand-photo"
-        style="background-image: url('images/placeholder-2.png');"
-      ></div>
+      <div class="brand-photo brand-1"></div>
+      <div class="brand-photo brand-2"></div>
+      <div class="brand-photo brand-1"></div>
+      <div class="brand-photo brand-2"></div>
+      <div class="brand-photo brand-1"></div>
+      <div class="brand-photo brand-2"></div>
       <div class="brands-button next">
         <a class="" href="#"><i class="fa fa-chevron-right"></i></a>
       </div>
