--- a/src/partials/20_section-promote.html
+++ b/src/partials/20_section-promote.html
@@ -4,22 +4,32 @@
       <div class="col-4">
         <div class="hot-deals">
           <div class="hot-deals__header">
-            <h4>hot deals</h4>
-            <span class="hot-deals__circle"></span>
+            <h4 class="hot-deals__header--text">hot deals</h4>
+            <div class="hot-deals__dots">
+              <span class="hot-deals__dots--dot"></span>
+              <span class="hot-deals__dots--dot"></span>
+              <span class="hot-deals__dots--dot"></span>
+            </div>
           </div>
           <div class="product-box hot-deals__product">
-            <div class="">
-              <img
-                src="https://secure.img1-fg.wfcdn.com/im/68010059/resize-h505-w505%5Ecompr-r85/3034/30347531/Rogersville+Armchair.jpg"
-                class="hot-deals__photo"
-                alt=""
-              />
-              <div class="buttons">
-                >
-                <a href="#" class="btn-main-small"
-                  ><i class="fa fa-shopping-basket"></i> ADD TO CART</a
-                >
-              </div>
+            <img
+              src="https://secure.img1-fg.wfcdn.com/im/68010059/resize-h505-w505%5Ecompr-r85/3034/30347531/Rogersville+Armchair.jpg"
+              class="hot-deals__photo"
+              alt=""
+            />
+            <div class="counter">
+              <span class="counter__value">25<br />days</span>
+              <span class="counter__value">10<br />hrs</span>
+              <span class="counter__value">45<br />mins</span>
+              <span class="counter__value"
+                >30<br />
+                secs</span
+              >
+            </div>
+            <div class="buttons">
+              <a href="#" class="btn-main-small hot-deals__button"
+                ><i class="fa fa-shopping-basket"></i> ADD TO CART</a
+              >
             </div>
             <div class="content">
               <h5>Aenean Ru Bristique</h5>
@@ -50,12 +60,14 @@
             alt=""
           />
           <div class="overlay">
-            <h2 class="overlay__header">indoor furnitldfkd</h2>
-            <button class="overlay__button">shop now</button>
+            <h2 class="overlay__header">INDOOR</h2>
+            <h2 class="overlay__header overlay__header--bold">FURNITURE</h2>
+            <p class="overlay__subheader">SAVE UP TO 50% OF ALL FURNITURE</p>
+            <button class="overlay__button">SHOP NOW</button>
           </div>
           <div class="distinguish__nav">
-            <button class="distinguish__nav--prev">prev</button>
-            <button class="distinguish__nav--next">next</button>
+            <button class="distinguish__buttons">&#62;</button>
+            <button class="distinguish__buttons">&#60;</button>
           </div>
         </div>
       </div>
