Add dropdown category on mobile and fix variables SASS

--- a/src/sass/_variables.scss
+++ b/src/sass/_variables.scss
@@ -18,10 +18,13 @@ $text-color: #2a2a2a;
 $form-border-color: #292929;
 $menu-categoryUl: #b07324;
 
+//
+$featured-cartCouter: translate(50%, -50%);
+
 //Grid
 $grid-base: 10px;
 
 //Breakpoint
-$bp-medium: "800px";
+$bp-medium: "768px";
 $bp-large: "1200px";
 $bp-small: "991px";
