--- a/src/sass/fontawesome/_mixins.scss
+++ b/src/sass/fontawesome/_mixins.scss
@@ -58,8 +58,35 @@
 
 //Custom mixin
 
+//animation
+
+@mixin animation($content) {
+  animation: $content;
+  -moz-animation: $content;
+  -webkit-animation: $content;
+}
+
+@mixin transition($transition...) {
+  -moz-transition:    $transition;
+  -o-transition:      $transition;
+  -webkit-transition: $transition;
+  transition:         $transition;
+}
+
+@mixin transform($transforms) {
+  -moz-transform: $transforms;
+  -o-transform: $transforms;
+  -ms-transform: $transforms;
+  -webkit-transform: $transforms;
+  transform: $transforms;
+}
+
+//braekpoint
+
 @mixin medium-up {
   @media(min-width: #{$bp-medium}) {
     @content;
   }
 }
+
+
