--- a/src/partials/10_header.html
+++ b/src/partials/10_header.html
@@ -53,14 +53,21 @@
     <div class="container">
       <div class="row align-items-center">
         <div class="col">
-          <nav class="category">
+          <nav id="myCategory" class="category">
             <i class="fas fa-list-ul"></i>
             <ul>
-              <li>
+              <li class="dropdown">
                 <div class="col-offset-2">
-                  <a href="#">Select a category</a> <i class="fas fa-caret-down"></i>
+                  <a
+                    href="#"
+                    data-toggle="dropdown"
+                    aria-haspopup="true"
+                    aria-expanded="false"
+                    >Select a category</a
+                  >
+                  <i class="fas fa-caret-down"></i>
                 </div>
-                <ul>
+                <ul class="dropdown-menu" aria-labelledby="dropdownMenuLink">
                   <li><a href="#">Free HTML</a></li>
                   <li><a href="#">Free CSS</a></li>
                   <li><a href="#">Free JavaScript</a></li>
