Add colors to variables

--- a/src/sass/_variables.scss
+++ b/src/sass/_variables.scss
@@ -1,5 +1,7 @@
 $header-topbar-bg: #864343;
 $header-bg: #723636;
+$cart-counter: #e0e3ed;
+$phone-number: #d8d8d8;
 
 $footer-claim-bg: #2a2a2a;
 $footer-bg: #363636;
