Fix hover line space

--- a/src/partials/80_section-brands.html
+++ b/src/partials/80_section-brands.html
@@ -3,7 +3,7 @@
     <div class="brands-panel">
       <div
         class="carousel wrap"
-        data-flickity="{&quot;pageDots&quot;: false, &quot;groupCells&quot;: &quot;100%&quot;, &quot;cellAlign&quot;: &quot;left&quot;, &quot;contain&quot;: true, &quot;wrapAround&quot;: true }"
+        data-flickity="{&quot;pageDots&quot;: false, &quot;groupCells&quot;: &quot;100%&quot;, &quot;cellAlign&quot;: &quot;center&quot;, &quot;contain&quot;: true, &quot;wrapAround&quot;: true }"
       >
         <div class="carousel-cell brand-1"></div>
         <div class="carousel-cell brand-2"></div>
